<resources>
    <string name="app_name">Digital KOT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="pizza">pizza</string>
    <string name="appetizers">Appetizers</string>
    <string name="pasta">pasta</string>
    <string name="offers">Offers</string>
    <string name="pan_pizza">Pan Pizza</string>
    <string name="cheesy_bites">Cheesy Bites</string>
    <string name="sausage_crust">Sausage Crust</string>
    <string name="thin_n_crust">Thin N Crust</string>
    <string name="add_pizza">Add New</string>
    <string name="type_item_name">Type new Pan pizza name</string>
    <string name="personal">Personal</string>
    <string name="medium">Medium</string>
    <string name="family">Family</string>
    <string name="type_price">Type Price</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="bbq_temptation">BBQ Temptation</string>
    <string name="_429">429</string>
    <string name="all_pan_pizza">All Pan Pizza</string>
    <string name="pl">PL</string>
    <string name="md">MD</string>
    <string name="fm">FM</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="delete">Delete</string>
    <string name="all_cheesy_bites">All Cheesy Bites</string>
    <string name="type_new_cheesy_bite_pizza_name">Type new Cheesy Bite pizza name</string>
    <string name="drinks">Drinks</string>
    <string name="all_sausage_crust">All Sausage Crust</string>
    <string name="type_your_new_sausage_crust_pizza">Type your new Sausage Crust pizza</string>
    <string name="all_thin_crust_pizza">All Thin Crust pizza</string>
    <string name="add_customer">Add Customer</string>
    <string name="phone_number">Phone Number</string>
    <string name="pan">PAN</string>
    <string name="cb">CB</string>
    <string name="gs">GS</string>
    <string name="tc">TC</string>
    <string name="_000_bdt">000 BDT</string>
    <string name="total_price">Total Price</string>
    <string name="okay">Okay</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>