<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/type_item_name"
            android:importantForAutofill="no"
            android:inputType="textWebEditText"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/dot_signal_line_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/type_price"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tv_personal_price"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/price_background"
                android:gravity="center"
                android:hint="@string/personal"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/gry" />

            <EditText
                android:id="@+id/tv_medium_price"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/price_background"
                android:gravity="center"
                android:hint="@string/medium"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/gry" />

            <EditText
                android:id="@+id/tv_family_price"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/price_background"
                android:gravity="center"
                android:hint="@string/family"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/gry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/red_lite"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/green_lite"
                android:text="@string/submit"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

        </LinearLayout>

    </LinearLayout>

</layout>