<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.PizzaFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/id_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500" />


        <TextView
            android:id="@+id/tv_pan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/pan_pizza"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_round_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/gry" />

        <TextView
            android:id="@+id/tv_cheesy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/cheesy_bites"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_round_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/gry" />

        <TextView
            android:id="@+id/tv_sausage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/sausage_crust"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_round_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/gry" />

        <TextView
            android:id="@+id/tv_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/thin_n_crust"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_round_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/gry" />

    </LinearLayout>
</layout>