<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.Material3.Light.Dialog.Alert">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FBF6C4"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/price_background"
                android:entries="@array/quantity"
                android:padding="8dp"
                android:spinnerMode="dropdown" />

            <RadioButton
                android:id="@+id/rPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/personal" />

            <RadioButton
                android:id="@+id/rMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:checked="true"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/rFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/family" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_selected_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FBF6C4"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/lite_red"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tool:text="@string/bbq_temptation" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_selected_item" />

    </LinearLayout>
</layout>