<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".SettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/layout_pizza"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="2.5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/pizza"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_drinks"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="2.5dp"
                android:layout_weight="1"
                android:background="@color/purple_700">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="drinks"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/layout_appetizers"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="2.5dp"
                android:layout_weight="1"
                android:background="@color/purple_700">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/appetizers"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_offers"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="2.5dp"
                android:layout_weight="1"
                android:background="@color/purple_500">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/offers"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>


    </LinearLayout>
</layout>